--- a/downstream/modules/eda/proc-eda-set-up-new-decision-environment.adoc
+++ b/downstream/modules/eda/proc-eda-set-up-new-decision-environment.adoc
@@ -8,10 +8,10 @@ You can import a decision environment into your {EDAcontroller} using a default 
 
 * You have set up a credential, if necessary.
 For more information, see the xref:eda-set-up-credential[Setting up credentials] section.
-* You have pushed a decision environment image to an image repository or you chose to use the `de-minimal` image that is provided by `de-supported` options located in the link:http://registry.redhat.io/[registry.redhat.io].
+* You have pushed a decision environment image to an image repository or you chose to use the `de-minimal` image that is provided by `de-supported` options located in link:http://registry.redhat.io/[registry.redhat.io].
 
 .Procedure
-// ddacosta I'm not sure whether there will be an EDA specific dashboard in the gateway. Step 1 might need to change to something like "Log in to AAP".
+
 . Log in to {PlatformNameShort}.
 . Navigate to {MenuADDecisionEnvironments}.
 . Click btn:[Create decision environment].
