--- a/downstream/modules/eda/proc-modifying-activations-during-install.adoc
+++ b/downstream/modules/eda/proc-modifying-activations-during-install.adoc
@@ -3,7 +3,7 @@
 = Modifying the number of simultaneous rulebook activations during {EDAcontroller} installation 
 
 [role="_abstract"]
-By default, {EDAcontroller} allows 12 activations to run simultaneously.
+By default, {EDAcontroller} allows 12 activations with two worker or hybrid nodes, resulting in a limit of 24 activations in total, to run simultaneously.
 You can modify this default value during installation by using the following procedure:
 
 .Procedure
