--- a/downstream/assemblies/hub/assembly-managing-collections-hub.adoc
+++ b/downstream/assemblies/hub/assembly-managing-collections-hub.adoc
@@ -13,14 +13,8 @@ As a content creator, you can use namespaces in {HubName} to curate and manage c
 * Upload collections to the namespace
 * Review the namespace import logs to determine the success or failure of uploading the collection and its current approval status
 
-For information on creating content, see the link:{LinkDevelopAutomationContent}.
+For information on creating content, see link:{LinkDevelopAutomationContent}.
 
-include::assembly-working-with-namespaces.adoc[leveloffset=+1]
-include::assembly-managing-private-collections.adoc[leveloffset=+1]
-include::assembly-repo-management.adoc[leveloffset=+1]
-include::assembly-remote-management.adoc[leveloffset=+2]
-include::assembly-repo-sync.adoc[leveloffset=+2]
-include::assembly-collection-import-export.adoc[leveloffset=+2]
 
 ifdef::parent-context[:context: {parent-context}]
 ifndef::parent-context[:!context:]
