--- a/downstream/assemblies/hub/assembly-managing-containers-hub.adoc
+++ b/downstream/assemblies/hub/assembly-managing-containers-hub.adoc
@@ -6,15 +6,8 @@ ifdef::context[:parent-context: {context}]
 :context: managing-containers
 
 [role="_abstract"]
-Learn the administrator workflows and processes for configuring {PrivateHubName} remote registry and repositories.
+Learn the administrator workflows and processes for configuring the {PrivateHubName} remote registry and repositories.
 
-include::assembly-managing-container-registry.adoc[leveloffset=+1]
-include::assembly-container-user-access.adoc[leveloffset=+1]
-include::assembly-populate-container-registry.adoc[leveloffset=+1]
-include::assembly-setup-container-repository.adoc[leveloffset=+1]
-include::assembly-pull-image.adoc[leveloffset=+1]
-include::assembly-working-with-signed-containers.adoc[leveloffset=+1]
-include::assembly-delete-container.adoc[leveloffset=+1]
 
 ifdef::parent-context[:context: {parent-context}]
 ifndef::parent-context[:!context:]
