--- a/downstream/titles/hub/managing-content/master.adoc
+++ b/downstream/titles/hub/managing-content/master.adoc
@@ -17,5 +17,18 @@ include::hub/assembly-collections-and-content-signing-in-pah.adoc[leveloffset=+1
 include::hub/assembly-validated-content.adoc[leveloffset=+1]
 
 include::hub/assembly-managing-collections-hub.adoc[leveloffset=+1]
+include::hub/assembly-working-with-namespaces.adoc[leveloffset=+1]
+include::hub/assembly-managing-private-collections.adoc[leveloffset=+1]
+include::hub/assembly-repo-management.adoc[leveloffset=+1]
+include::hub/assembly-remote-management.adoc[leveloffset=+2]
+include::hub/assembly-repo-sync.adoc[leveloffset=+2]
+include::hub/assembly-collection-import-export.adoc[leveloffset=+2]
 
 include::hub/assembly-managing-containers-hub.adoc[leveloffset=+1]
+include::hub/assembly-managing-container-registry.adoc[leveloffset=+1]
+include::hub/assembly-container-user-access.adoc[leveloffset=+1]
+include::hub/assembly-populate-container-registry.adoc[leveloffset=+1]
+include::hub/assembly-setup-container-repository.adoc[leveloffset=+1]
+include::hub/assembly-pull-image.adoc[leveloffset=+1]
+include::hub/assembly-working-with-signed-containers.adoc[leveloffset=+1]
+include::hub/assembly-delete-container.adoc[leveloffset=+1]
