--- a/stories/topics/proc-azure-configure-ad-sso.adoc
+++ b/stories/topics/proc-azure-configure-ad-sso.adoc
@@ -19,14 +19,14 @@ Follow the procedures below to configure SSO with {MSEntraID}. If your organizat
 
 To set up enterprise authentication for {MSEntraID}, you must obtain an OAuth2 key and secret by registering your {PlatformNameShort} deployment in Azure.
 
-To register the {ControllerName} instance in Azure, you must supply the _Azure AD OAuth2 Callback URL_ from the {ControllerName} settings.
+To register the {ControllerName} instance in Azure, you must supply the _{MSEntraID} OAuth2 Callback URL_ from the {ControllerName} settings.
 
-.Fetching the Azure AD OAuth2 Callback URL
+.Fetching the {MSEntraID} OAuth2 Callback URL
 
 . In a web browser, open the {ControllerName} console.
 . Click *Settings* in the menu to open the main settings page.
-. Click *Azure AD settings* in the *Authentication* category to open the *Details* page.
-. Copy the value for _Azure AD OAuth2 Callback URL_. You will need this value when you register your deployed application in {MSEntraID}.
+. Click *{MSEntraID} settings* in the *Authentication* category to open the *Details* page.
+. Copy the value for _{MSEntraID} OAuth2 Callback URL_. You will need this value when you register your deployed application in {MSEntraID}.
 
 .Creating a registered application in {MSEntraID}
 
@@ -40,7 +40,7 @@ To register the {ControllerName} instance in Azure, you must supply the _Azure A
   * In the *Name* field, enter the same name that you used for the deployed application.
   * Select the default value for *Supported account types*.
   * Select *Web* for *Redirect URI (optional)*.
-  * In the *Redirect URI (optional)* field, enter the _Azure AD OAuth2 Callback URL_ value that you fetched from {ControllerName}.
+  * In the *Redirect URI (optional)* field, enter the _{MSEntraID} OAuth2 Callback URL_ value that you fetched from {ControllerName}.
 . Click *Register* to create the registration.
 
 When registration is complete, the registration page for the Automation Controller application is displayed.
@@ -49,7 +49,7 @@ When registration is complete, the registration page for the Automation Controll
 
 . In the *Automation controller application registration page* on Azure, copy and save the value of _Application (client) ID_.
 +
-You will use this value for the _Azure AD OAuth2 Key_ in the {PlatformNameShort} settings.
+You will use this value for the _{MSEntraID}OAuth2 Key_ in the {PlatformNameShort} settings.
 . Under *Manage*, click *Certificates & secrets*.
 . Click *Client secrets* and then *+ New client secret*.
 . Provide a description for the new secret.
@@ -68,11 +68,11 @@ The maximum lifetime for the certificate is 2 years. Unless you have specific se
 Add the key _(Application (client) ID)_ and value (_Value_) of the secret that you generated in Azure to your {PlatformNameShort} instance.
 
 . Open the {ControllerName} console in a web browser.
-. Click menu:Settings[Azure AD settings].
+. Click menu:Settings[{MSEntraID} settings].
 . Click *Edit*.
 . Enter the information for the secret that you generated in {MSEntraID}:
-  . In *Azure AD OAuth2 Key*, paste the _Application (client) ID_.
-  . In *Azure AD OAuth2 Secret*, paste the secret _Value_.
+  . In *{MSEntraID} OAuth2 Key*, paste the _Application (client) ID_.
+  . In *{MSEntraID} OAuth2 Secret*, paste the secret _Value_.
 . Click *Save*.
 
 .Adding Azure Credentials to Automation controller
