--- a/stories/topics/proc-azure-nw-private-deploy.adoc
+++ b/stories/topics/proc-azure-nw-private-deploy.adoc
@@ -2,8 +2,8 @@
 
 = Private deployments
 
-If you selected private access when deploying {AAPonAzureNameShort},
-then the DNS record issued to the {AAPonAzureName} application points to a private address within the CIDR block selected when the managed application was deployed.
+If you selected private access when you deployed{AAPonAzureNameShort},
+then the DNS record issued to the {AAPonAzureName} application points to a private address within the CIDR block selected when you deploy the managed application.
 You must configure access to this address after you have created network peering.
 // This address is not accessible from external sources
 
